[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "princess"
authors = [
    {name = "European XFEL GmbH", email = "da-support@xfel.eu"},
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "nbclient",
    "nbformat",
    "jupyter_client >=6.1.0",
    "ipykernel",
]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/European-XFEL/princess"
